force-app/main/default/objects/Broker_Agent__c/Broker_Agent__c.object-meta.xml
<CustomObject>
    <label>Broker Agent</label>
    <nameField>
        <label>Agent Name as per Passport</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Broker Agents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>