force-app/main/default/objects/Broker_Agent__c/fields/Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Agent_ID__c</fullName>
    <displayFormat>BR - {0000}</displayFormat>
    <label>Agent ID</label>
    <type>AutoNumber</type>
</CustomField>