force-app/main/default/objects/Broker_Agent__c/fields/BRN_No_if_any__c.field-meta.xml
<CustomField>
    <fullName>BRN_No_if_any__c</fullName>
    <label>BRN No if any</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>