force-app/main/default/objects/Broker_Agent__c/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Channel Partner</label>
    <referenceTo>Channel_Partner__c</referenceTo>
    <relationshipLabel>Broker Agents</relationshipLabel>
    <relationshipName>Broker_Agents</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>