force-app/main/default/objects/Broker_Agent__c/fields/Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Mobile_No__c</fullName>
    <label>Mobile No</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>