force-app/main/default/objects/Broker_Agent__c/fields/Passport_No__c.field-meta.xml
<CustomField>
    <fullName>Passport_No__c</fullName>
    <label>Passport No</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>