force-app/main/default/objects/Broker_Agent__c/fields/Sobha_Connect__c.field-meta.xml
<CustomField>
    <fullName>Sobha_Connect__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sobha Connect</label>
    <referenceTo>Sobha_Connect__c</referenceTo>
    <relationshipLabel>Broker Agents</relationshipLabel>
    <relationshipName>Broker_Agents</relationshipName>
    <type>Lookup</type>
</CustomField>