force-app/main/default/objects/Broker_Agent__c/fields/Telephone_No__c.field-meta.xml
<CustomField>
    <fullName>Telephone_No__c</fullName>
    <label>Telephone No</label>
    <type>Phone</type>
</CustomField>