force-app/main/default/objects/Broker_Agent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agent_Name__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>